@@ -8,6 +8,7 @@ o Renamed iterable to collection
 o Fixed #795: so that WITH keeps parameters also for empty aggregation results
 o Fixed #772: Creating nodes/relationships goes before SET, so SET can run on already created elements
 o Added error when using != instead of <>
+o Fixed #787: Issue when comparing array properties with literal collections
 
 1.8.M07 (2012-08-08)
 --------------------
